<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter your name.</string>
    <string name="name">e.g. Shahzaib</string>
    <string name="start">Start</string>
    <string name="flag_image">Flag Image</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="trophy_picture">Trophy Picture</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="btnNextQuestion">Go to Next Question</string>
</resources>