<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/ic_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textStyle="bold"
                android:textColor="#363A43"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:textColor="#363A43"
                    android:textColorHint="@color/design_default_color_primary" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:background="@color/design_default_color_primary"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>